# advent-of-code

./: .gitignore
2022/day1/: part1.ts  part2.ts
2022/day10/: part1.ts  part2-golf.ts  part2.ts
2022/day11/: part1.ts  part2.ts
2022/day12/: part1.ts  part2.ts
2022/day13/: part1.ts  part2-golf.ts  part2.ts
2022/day14/: cave.txt  part1.ts  part2.ts
2022/day15/: part1.ts  part2.ts
2022/day18/: cubes-viz.html  part1.ts  part2.ts
2022/day2/: part1.ts  part2.ts
2022/day20/: part1-fail.ts  part1.ts  part2.ts
2022/day21/: part1.ts  part2.ts
2022/day24/: part1.ts
2022/day3/: part1.ts  part2-golf-01.ts  part2-golf-02.ts  part2.ts
2022/day4/: part1.ts  part2-golf-01.ts  part2.ts
2022/day5/: part1.ts  part2-golf.js  part2.ts
2022/day6/: part1.ts  part2.ts
2022/day7/: part1.ts  part2.ts
2022/day8/: part1.ts  part2.ts
2022/day9/: part1.ts  part2.ts  test1.ts
2024/day01/: part1.ts  part2.ts
2024/day02/: part1.ts  part2.ts
2024/day03/: part1.ts  part2.ts
2024/day04/: part1.ts  part2.ts
2024/day05/: part1.ts  part2.ts
2024/day06/: part1.ts  part2.ts
2024/day07/: input.txt  part1.ts  part2.ts
2024/day08/: input.txt  part1.ts  part2.ts
2025/aoc_rust/: Cargo.toml
2025/aoc_rust/src/: day-01-1.rs  day-01-2.rs  day-02-1.rs  day-02-2.rs  day-03-1.rs  day-03-2.rs  day-04-1.rs  day-04-2.rs  day-05-1.rs  day-05-2.rs
